<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ParticipantsActivity">

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/title_participants"
        android:textSize="24sp"
        android:gravity="center">
    </TextView>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/subtitle_participants"
        android:text="@string/lista_participantes"
        android:gravity="center"
        android:textSize="24sp">
    </TextView>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="450dp">

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/listParticipants"
            android:background="@drawable/border"/>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/addParticipantBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button"
            android:onClick="onClickAddParticipant"
            android:text="@string/a_adir" />

        <Space
            android:layout_width="20dp"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/removeParticipantBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button"
            android:text="@string/eliminar"
            android:onClick="onClickRemoveParticipant">

        </Button>

    </LinearLayout>

</LinearLayout>